[gd_scene load_steps=12 format=3 uid="uid://dg0v8j8vrcf1b"]

[ext_resource type="Texture2D" uid="uid://cq06ejcprmhww" path="res://Images/Char1.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://cdmhfocxiuk0h" path="res://player.gd" id="1_onrkg"]
[ext_resource type="AudioStream" uid="uid://quldpr465g5f" path="res://Audio/woosh.mp3" id="3_i3pqv"]
[ext_resource type="AudioStream" uid="uid://bwkb13ea5xcg6" path="res://Audio/hurt_c_08-102842.mp3" id="4_hqtel"]
[ext_resource type="AudioStream" uid="uid://br7kqkle4q64q" path="res://Audio/deathsound.mp3" id="4_n7ghd"]
[ext_resource type="Texture2D" uid="uid://db6neqeho0e7m" path="res://Images/Sprite-0003.png" id="5_dw050"]
[ext_resource type="Texture2D" uid="uid://5vg4g04q36w" path="res://Images/cat.jpg" id="5_sweqy"]
[ext_resource type="Theme" uid="uid://gt7favadcjg3" path="res://Menu.tres" id="6_2hs0m"]
[ext_resource type="Texture2D" uid="uid://j76istwqyq44" path="res://Images/R1Photo.png" id="7_1jxqw"]
[ext_resource type="Theme" uid="uid://cat7hux1b40qc" path="res://area_select.tres" id="9_b26j0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(64, 64)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_onrkg")

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i3pqv")
volume_db = -10.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(32, -96)
zoom = Vector2(0.7, 0.7)
position_smoothing_enabled = true

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hqtel")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_n7ghd")
volume_db = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_onrkg")

[node name="MainSprite" type="Sprite2D" parent="."]
position = Vector2(32, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_4flbx")

[node name="BoostSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(32, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_dw050")

[node name="Cat" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.380392)
position = Vector2(32, 32)
scale = Vector2(0.10327, 0.108499)
texture = ExtResource("5_sweqy")

[node name="Menu" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -324.0
offset_right = 500.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_2hs0m")

[node name="SettingsButton" type="Button" parent="Menu/Panel"]
layout_mode = 0
offset_left = 28.0
offset_top = 128.0
offset_right = 220.0
offset_bottom = 192.0
theme = ExtResource("6_2hs0m")
theme_override_colors/font_color = Color(0.359332, 0.557774, 1, 1)
theme_override_colors/font_focus_color = Color(0.360784, 0.556863, 1, 1)
theme_override_colors/font_pressed_color = Color(0.360784, 0.556863, 1, 1)
text = "Settings"

[node name="ChecklistButton" type="Button" parent="Menu/Panel"]
layout_mode = 0
offset_left = 28.0
offset_top = 224.0
offset_right = 220.0
offset_bottom = 288.0
theme = ExtResource("6_2hs0m")
theme_override_colors/font_color = Color(0.98235, 0.302681, 0.334687, 1)
theme_override_colors/font_focus_color = Color(0.980392, 0.301961, 0.333333, 1)
theme_override_colors/font_pressed_color = Color(0.980392, 0.301961, 0.333333, 1)
text = "Checklist"

[node name="ItemsButton" type="Button" parent="Menu/Panel"]
layout_mode = 0
offset_left = 28.0
offset_top = 320.0
offset_right = 220.0
offset_bottom = 384.0
theme = ExtResource("6_2hs0m")
theme_override_colors/font_color = Color(0.180758, 0.690617, 0.305671, 1)
theme_override_colors/font_focus_color = Color(0.180392, 0.690196, 0.305882, 1)
theme_override_colors/font_pressed_color = Color(0.180392, 0.690196, 0.305882, 1)
text = "Items"

[node name="AreasButton" type="Button" parent="Menu/Panel"]
layout_mode = 0
offset_left = 28.0
offset_top = 416.0
offset_right = 220.0
offset_bottom = 480.0
theme = ExtResource("6_2hs0m")
theme_override_colors/font_color = Color(0.845028, 0.468338, 0.215803, 1)
theme_override_colors/font_focus_color = Color(0.843137, 0.466667, 0.215686, 1)
theme_override_colors/font_pressed_color = Color(0.843137, 0.466667, 0.215686, 1)
text = "Areas"

[node name="MiscButton" type="Button" parent="Menu/Panel"]
layout_mode = 0
offset_left = 28.0
offset_top = 568.0
offset_right = 220.0
offset_bottom = 632.0
theme = ExtResource("6_2hs0m")
theme_override_colors/font_color = Color(0.703808, 0.703808, 0.703808, 1)
theme_override_colors/font_focus_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_colors/font_pressed_color = Color(0.701961, 0.701961, 0.701961, 1)
text = "Misc"

[node name="Label" type="Label" parent="Menu/Panel"]
layout_mode = 0
offset_left = 4.0
offset_right = 996.0
offset_bottom = 104.0
theme = ExtResource("6_2hs0m")
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Menu/Panel"]
visible = false
layout_mode = 0
offset_left = 380.0
offset_top = 112.0
offset_right = 900.0
offset_bottom = 632.0
texture = ExtResource("7_1jxqw")
expand_mode = 1

[node name="Panel" type="Panel" parent="Menu/Panel"]
layout_mode = 0
offset_left = 244.0
offset_top = 112.0
offset_right = 988.0
offset_bottom = 632.0
theme = ExtResource("6_2hs0m")

[node name="Close" type="Button" parent="Menu/Panel"]
layout_mode = 0
offset_left = 908.0
offset_top = 16.0
offset_right = 980.0
offset_bottom = 88.0
theme = ExtResource("6_2hs0m")
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_colors/font_focus_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_colors/font_pressed_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_font_sizes/font_size = 50
text = "X"

[node name="Tab0" type="Control" parent="Menu/Panel"]
anchors_preset = 0
offset_left = 244.0
offset_top = 112.0
offset_right = 988.0
offset_bottom = 632.0

[node name="Label" type="Label" parent="Menu/Panel/Tab0"]
layout_mode = 0
offset_left = 256.0
offset_top = 152.0
offset_right = 512.0
offset_bottom = 344.0
theme = ExtResource("6_2hs0m")
text = "N/A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tab1" type="Control" parent="Menu/Panel"]
visible = false
anchors_preset = 0
offset_left = 244.0
offset_top = 112.0
offset_right = 988.0
offset_bottom = 632.0

[node name="Label" type="Label" parent="Menu/Panel/Tab1"]
layout_mode = 0
offset_left = 256.0
offset_top = 152.0
offset_right = 512.0
offset_bottom = 344.0
theme = ExtResource("6_2hs0m")
text = "N/A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tab2" type="Control" parent="Menu/Panel"]
visible = false
anchors_preset = 0
offset_left = 244.0
offset_top = 112.0
offset_right = 988.0
offset_bottom = 632.0

[node name="Label" type="Label" parent="Menu/Panel/Tab2"]
layout_mode = 0
offset_left = 256.0
offset_top = 152.0
offset_right = 512.0
offset_bottom = 344.0
theme = ExtResource("6_2hs0m")
text = "N/A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tab3" type="Control" parent="Menu/Panel"]
visible = false
anchors_preset = 0
offset_left = 244.0
offset_top = 112.0
offset_right = 988.0
offset_bottom = 632.0

[node name="Label" type="Label" parent="Menu/Panel/Tab3"]
layout_mode = 0
offset_left = 256.0
offset_top = 152.0
offset_right = 512.0
offset_bottom = 344.0
theme = ExtResource("6_2hs0m")
text = "N/A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tab4" type="Control" parent="Menu/Panel"]
visible = false
anchors_preset = 0
offset_left = 244.0
offset_top = 112.0
offset_right = 988.0
offset_bottom = 632.0

[node name="Label" type="Label" parent="Menu/Panel/Tab4"]
layout_mode = 0
offset_left = 256.0
offset_top = 152.0
offset_right = 512.0
offset_bottom = 344.0
theme = ExtResource("6_2hs0m")
text = "N/A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tab5" type="Control" parent="Menu/Panel"]
visible = false
anchors_preset = 0
offset_left = 244.0
offset_top = 112.0
offset_right = 988.0
offset_bottom = 632.0

[node name="ExitR" type="Button" parent="Menu/Panel/Tab5"]
layout_mode = 0
offset_left = 256.0
offset_top = 96.0
offset_right = 512.0
offset_bottom = 216.0
theme = ExtResource("6_2hs0m")
theme_override_colors/font_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_colors/font_focus_color = Color(0.701961, 0.701961, 0.701961, 1)
theme_override_colors/font_pressed_color = Color(0.701961, 0.701961, 0.701961, 1)
text = "Exit Realm"

[node name="Boost" type="Button" parent="Menu/Panel/Tab5"]
layout_mode = 0
offset_left = 16.0
offset_top = 416.0
offset_right = 152.0
offset_bottom = 504.0
theme = ExtResource("6_2hs0m")
theme_override_colors/font_color = Color(0.290252, 0.774989, 0.870331, 1)
theme_override_colors/font_focus_color = Color(0.290196, 0.776471, 0.870588, 1)
theme_override_colors/font_pressed_color = Color(0.290196, 0.776471, 0.870588, 1)
text = "Boost"

[node name="QuitG" type="Button" parent="Menu/Panel/Tab5"]
layout_mode = 0
offset_left = 256.0
offset_top = 280.0
offset_right = 512.0
offset_bottom = 400.0
theme = ExtResource("6_2hs0m")
theme_override_colors/font_color = Color(1, 0.174173, 0.127215, 1)
theme_override_colors/font_focus_color = Color(1, 0.172549, 0.12549, 1)
theme_override_colors/font_pressed_color = Color(1, 0.172549, 0.12549, 1)
text = "Quit Game"

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="GUI"]
visible = false
offset_left = 64.0
offset_top = 512.0
offset_right = 128.0
offset_bottom = 576.0
theme = ExtResource("6_2hs0m")
theme_override_font_sizes/font_size = 18
text = "Menu"

[node name="HealthBar" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="GUI/HealthBar"]
layout_mode = 0
offset_left = 1728.0
offset_top = 64.0
offset_right = 1857.0
offset_bottom = 128.0
theme = ExtResource("9_b26j0")
theme_override_font_sizes/font_size = 20
text = "Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TowerName" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="GUI/TowerName"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 0
offset_left = 896.0
offset_top = 72.0
offset_right = 996.0
offset_bottom = 122.0
theme = ExtResource("9_b26j0")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Null"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Heal" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="Menu/Panel/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Menu/Panel/ChecklistButton" to="." method="_on_checklist_button_pressed"]
[connection signal="pressed" from="Menu/Panel/ItemsButton" to="." method="_on_items_button_pressed"]
[connection signal="pressed" from="Menu/Panel/AreasButton" to="." method="_on_areas_button_pressed"]
[connection signal="pressed" from="Menu/Panel/MiscButton" to="." method="_on_misc_button_pressed"]
[connection signal="pressed" from="Menu/Panel/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Menu/Panel/Tab5/ExitR" to="." method="_on_exit_r_pressed"]
[connection signal="pressed" from="Menu/Panel/Tab5/Boost" to="." method="_on_boost_pressed"]
[connection signal="pressed" from="Menu/Panel/Tab5/QuitG" to="." method="_on_quit_g_pressed"]
[connection signal="timeout" from="Heal" to="." method="_on_heal_timeout"]
